# personal_kpis

./: .env  Cargo.toml  Dockerfile  docker-compose.build.yml  docker-compose.yml  esquema.sql  schema.sql  setup.sql
.github/workflows/: release.yml
.sqlx/: query-36d76b13edb27c6655ef0dda3615cf477a71e10c2b13d3baba0d5558e936b690.json  query-d6866a9f14f4aab21ab8d31a200c1e317daf859127fd4b05bb09f2ea29034ef6.json  query-edc7f9e6d43d41ba00bfe1c5a29c99e17f3149aca4c2c119fc23f802dfaa3096.json
documentacion/: documentacion personal KPIS.pages
public/: index.html
src/: main.rs
